hphp/hack/test/deregister/test_method.php.exp
File "test_method.php", line 4, characters 13-29:
No static method `getUnicodeVersion` in `IntlChar` (Typing[4090])
  File "stdlib/builtins_icu_uchar.hhi", line 656, characters 26-40:
  Did you mean `getPropertyName` instead?
  File "stdlib/builtins_icu_uchar.hhi", line 3, characters 7-14:
  Declaration of `IntlChar` is here
